@@ -1,5 +1,8 @@
 2002-08-13  Lars Clausen  <lrclause@cs.uiuc.edu>
 
+	* app/render_libart.[ch]: Work on PNG font export.  Something's
+	still fishy with the scaling, I don't get it.
+
 	* app/display.c: 
 	* app/interface.c: Replaced broken zoom combo with entry+menu.
 	Now works beautifully.  Removed WITHOUT_ZOOM_COMBO stuff.
